--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "password-manager-app",
+	"name": "svelte-password-manager",
 	"private": true,
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
@@ -24,15 +24,15 @@
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
 		"@playwright/test": "^1.49.1",
-		"@sveltejs/adapter-node": "^5.2.12",
-		"@sveltejs/kit": "^2.22.0",
+		"@sveltejs/adapter-node": "^0.0.18",
+		"@sveltejs/kit": "^2.31.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/node": "^22",
 		"@vitest/browser": "^3.2.3",
-		"drizzle-kit": "^0.30.2",
+		"drizzle-kit": "^0.18.1",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -53,8 +53,10 @@
 	},
 	"dependencies": {
 		"@libsql/client": "^0.14.0",
+		"@sveltejs/adapter-vercel": "^0.0.3",
 		"@types/crypto-js": "^4.2.2",
 		"crypto-js": "^4.2.0",
+		"dotenv": "^17.2.1",
 		"drizzle-orm": "^0.40.0",
 		"valibot": "^1.1.0"
 	}
